@@ -24,6 +24,7 @@
 int setupControl(char *fn);
 void sunsetControl();
 int getControlChars(char *id, char **val);
+int getControlUNum(char *id, unsigned int *val);
 int getControlNum(char *id, long *val);
 int getControlBool(char *id, int *val);
 
